# two_wheel_self_balance_car

./: .gitignore  README.md
.cursor/rules/: html-code-copy-buttons.mdc
docs/: balance_control_architecture.html  balance_loop_code_structure_simple.html  balance_loop_design.html  balance_physics_principle.html  balance_velocity_tuning_guide.html  cascaded_pid_theory.html  motion_control_framework.html  ros2_control_velocity_command_flow.html  three_loop_cascade_and_position_tuning.html  two_wheel_balance_65mm_urdf_gazebo_explained.html
src/balance_car_control/: CMakeLists.txt  package.xml
src/balance_car_control/config/: balance_controller.yaml
src/balance_car_control/launch/: balance_controller.launch.py
src/balance_car_control/src/: attitude_estimator.py  balance_controller_node.py  balance_pd.py  balance_types.py  imu_debug_node.py  motion_command.py  position_loop.py  safety_limiter.py  velocity_loop.py  wheel_mixer.py  yaw_loop.py
src/balance_car_description/: CMakeLists.txt  package.xml
src/balance_car_description/config/: ros2_control_balance_65mm.yaml
src/balance_car_description/launch/: display.launch.py  gazebo.launch.py
src/balance_car_description/rviz/: display.rviz
src/balance_car_description/scripts/: generate_dual_slope_worlds.py
src/balance_car_description/urdf/: two_wheel_balance_65mm.urdf.xacro
src/balance_car_description/worlds/: balance_pid_test.world  empty.world  gentle_slope.world  imu_debug.world  mine_design.world
